<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Question"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="273dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question"
        app:layout_constraintVertical_bias="0.941">

        <Button
            android:id="@+id/TrueButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/True" />

        <Button
            android:id="@+id/FalseButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/False" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutH"
            android:layout_width="261dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/PrevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Prev"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/SkipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Next"
                style="?android:attr/buttonBarButtonStyle"/>


        </LinearLayout>

        <Button
            android:id="@+id/CheatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cheat"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="676dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>